--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,7 @@
     "core-js": "^3.22.2",
     "csv-stringify": "^5.6.0",
     "d3": "^5.12.0",
-    "geojs": "file:../../geojs",
+    "geojs": "^1.15.1",
     "glob-to-regexp": "^0.4.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.19",
